Minimal events API

--- a/TEG/appsettings.json
+++ b/TEG/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EventSettings": {
+    "SourceUrl": "https://teg-coding-challenge.s3.ap-southeast-2.amazonaws.com/events/event-data.json",
+    "CacheDurationMinutes": 5,
+    "RequestTimeoutSeconds": 10,
+    "MaxRetries": 3
+  }
 }
